--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button>获取结果</button>
     
     </div>
-    <script src="http://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/jquery.cityMultiple.js"></script>
     <script>
         var demo = $("#cityDemo").cityMultiple();
